# local-img-hosting

./: .env  Cargo.toml  README.md  run.sh  run_upload.sh
src/: lib.rs
