[package]
name = "tide_img_hosting"
version = "0.1.0"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
surf = "2.2.0"
