[package]
name = "tide_img_hosting"
version = "0.1.0"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
env_logger = "0.8"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2.2.0"
log = { version = "0.4.13", features = ["kv_unstable_std"] }
rand = "0.8.3"
isahc = { version="1.7", features = ["json"] }
fs4 = { version = "0.5", features = ["tokio-async"] }
# block-utils = "0.10"
